@@ -5,7 +5,6 @@
 #include <sys/types.h>
 #include <unistd.h>
 #include <sys/time.h>
-#include <sys/utsname.h>
 #include "ntpd.h"
 #include "ntp_stdlib.h"
 #include "ntp_string.h"
@@ -94,8 +93,8 @@ main(
 	u_char encoded_key[MAXKEYLEN];	/* encoded PEM string buffer */
 	u_int modulus;			/* modulus length */
 	struct timeval tv;		/* initialization vector */
-	struct utsname utsnamebuf;	/* uname argument structure */
-	u_char sysname[128];		/* DNS host name */
+	u_char hostname[256];		/* DNS host name */
+	u_char filename[256];		/* public key file name */
 	u_char md5key[17];		/* generated MD5 key */ 
 	FILE *str;			/* file handle */
 	int rval;			/* return value */
@@ -106,7 +105,7 @@ main(
 	 * Generate the file "ntp.keys" containing 16 random MD5 keys in
 	 * the format expected at daemon run time.
 	 */
-	uname(&utsnamebuf);
+	gethostname(&hostname, sizeof hostname);
 	printf("Generating MD5 keys...\n");
 	str = fopen("ntp.keys", "w");
 	if (str == NULL) {
@@ -116,7 +115,7 @@ main(
 	gettimeofday(&tv, 0);
 	srandom((u_int)tv.tv_sec);
 	fprintf(str, "# MD5/DES key file generated by %s\n# %s",
-	    utsnamebuf.nodename, ctime(&tv.tv_sec));
+	    hostname, ctime(&tv.tv_sec));
 	for (i = 1; i <= 16; i++) {
 		for (j = 0; j < 16; j++) {
 			while (1) {
@@ -164,7 +163,7 @@ main(
 	len = sizeof(rsaref_private) - sizeof(rsaref_private.bits);
 	modulus = (u_int32)rsaref_private.bits;
 	fprintf(str, "# RSA private key file generated by %s\n# %s",
-	    utsnamebuf.nodename, ctime(&tv.tv_sec));
+	    hostname, ctime(&tv.tv_sec));
 	R_EncodePEMBlock(encoded_key, &temp,
 	    (u_char *)&rsaref_private.modulus, len);
 	encoded_key[temp] = '\0';
@@ -175,8 +174,8 @@ main(
 	 * Generate the file "ntpkey_host" containing the RSA public key
 	 * in printable ASCII format.
 	 */
-	sprintf(sysname, "ntpkey_%s", utsnamebuf.nodename); 
-	str = fopen(sysname, "w");
+	snprintf(filename, sizeof filename, "ntpkey_%s", hostname); 
+	str = fopen(filename, "w");
 	if (str == NULL) { 
 		perror("RSA public key file");
 		return (-1);
@@ -184,7 +183,7 @@ main(
 	len = sizeof(rsaref_public) - sizeof(rsaref_public.bits);
 	modulus = (u_int32)rsaref_public.bits;
 	fprintf(str, "# RSA public key file generated by %s\n# %s",
-	    utsnamebuf.nodename, ctime(&tv.tv_sec));
+	    hostname, ctime(&tv.tv_sec));
 	R_EncodePEMBlock(encoded_key, &temp,
 	    (u_char *)&rsaref_public.modulus, len);
 	encoded_key[temp] = '\0';
@@ -224,7 +223,7 @@ main(
 	}
 	fprintf(str,
 	    "# Diffie-Hellman parameter file generated by %s\n# %s",
-	    utsnamebuf.nodename, ctime(&tv.tv_sec));
+	    hostname, ctime(&tv.tv_sec));
 	R_EncodePEMBlock(encoded_key, &temp,
 	    (u_char *)dh_params.prime, dh_params.primeLen);
 	encoded_key[temp] = '\0';
